# wasmrs

./: .gitignore  Cargo.toml  LICENCE.txt  README.md  bench.js  benchmark.js  index.js  package-lock.json  package.json  todo.txt  webpack.config.js
jssrc/: bench.js  benchmark.js  index.js  pcc.js  stats.js  styles.js
scss/: main.scss
src/: lib.rs
src/data_frame/: .mod.rs.swp  mod.rs
static/: benchmark.html  index.html  stats.html
