[package]
name = "wasm_stats"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
approx = "0.5"
wasm-bindgen = "0.2.73"
futures = "0.3"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3

[profilet.test]
lto = true
opt-level = 0


[package.metadata.wasm-pack.profile.release]
wasm-opt = true 
